nodejs/versioned_docs/version-1.15/release-notes.mdx
---
id: release-notes
title: "Release notes"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

- [Version 1.15](#version-115)
- [Version 1.14](#version-114)
- [Version 1.13](#version-113)
- [Version 1.12](#version-112)
- [Version 1.11](#version-111)
- [Version 1.10](#version-110)
- [Version 1.9](#version-19)
- [Version 1.8](#version-18)
- [Version 1.7](#version-17)

## Version 1.15

### 🎭 Playwright Library

#### 🖱️ Mouse Wheel

By using [`Page.mouse.wheel`](https://playwright.dev/docs/api/class-mouse#mouse-wheel) you are now able to scroll vertically or horizontally.

#### 📜 New Headers API

Previously it was not possible to get multiple header values of a response. This is now  possible and additional helper functions are available:
- [Request.allHeaders()](https://playwright.dev/docs/api/class-request#request-all-headers)
- [Request.headersArray()](https://playwright.dev/docs/api/class-request#request-headers-array)
- [Request.headerValue(name: string)](https://playwright.dev/docs/api/class-request#request-header-value)
- [Response.allHeaders()](https://playwright.dev/docs/api/class-response#response-all-headers)
- [Response.headersArray()](https://playwright.dev/docs/api/class-response#response-headers-array)
- [Response.headerValue(name: string)](https://playwright.dev/docs/api/class-response#response-header-value)
- [Response.headerValues(name: string)](https://playwright.dev/docs/api/class-response/#response-header-values)

#### 🌈 Forced-Colors emulation

Its now possible to emulate the `forced-colors` CSS media feature by passing it in the [context options](https://playwright.dev/docs/api/class-browser#browser-new-context-option-forced-colors) or calling [Page.emulateMedia()](https://playwright.dev/docs/api/class-page#page-emulate-media).

#### New APIs
- [Page.route()](https://playwright.dev/docs/api/class-page#page-route) accepts new `times` option to specify how many times this route should be matched.
- [Page.setChecked(selector: string, checked: boolean)](https://playwright.dev/docs/api/class-page#page-set-checked) and [Locator.setChecked(selector: string, checked: boolean)](https://playwright.dev/docs/api/class-locator#locator-set-checked) was introduced to set the checked state of a checkbox.
- [Request.sizes()](https://playwright.dev/docs/api/class-request#request-sizes) Returns resource size information for given http request.
- [BrowserContext.tracing.startChunk()](https://playwright.dev/docs/api/class-tracing#tracing-start-chunk) - Start a new trace chunk.
- [BrowserContext.tracing.stopChunk()](https://playwright.dev/docs/api/class-tracing#tracing-stop-chunk) - Stops a new trace chunk.

### 🎭 Playwright Test

#### 🤝 `test.parallel()` run tests in the same file in parallel

By default, tests in a single file are run in order. If you have many independent tests in a single file, you can now run them in parallel with [test.describe.parallel(title, callback)](https://playwright.dev/docs/api/class-test#test-describe-parallel).

#### 🛠 Add `--debug` CLI flag

By using `npx playwright test --debug` it will enable the [Playwright Inspector](https://playwright.dev/docs/debug#playwright-inspector) for you to debug your tests.

### Browser Versions
- Chromium 96.0.4641.0
- Mozilla Firefox 92.0
- WebKit 15.0

## Version 1.14

### 🎭 Playwright Library

#### ⚡️ New "strict" mode

Selector ambiguity is a common problem in automation testing. **"strict" mode** ensures that your selector points to a single element and throws otherwise.

Pass `strict: true` into your action calls to opt in.

```js
// This will throw if you have more than one button!
await page.click('button', { strict: true });
```

#### 📍 New [**Locators API**](./api/class-locator)

Locator represents a view to the element(s) on the page. It captures the logic sufficient to retrieve the element at any given moment.

The difference between the [Locator](./api/class-locator) and [ElementHandle](./api/class-elementhandle) is that the latter points to a particular element, while [Locator](./api/class-locator) captures the logic of how to retrieve that element.

Also, locators are **"strict" by default**!

```js
const locator = page.locator('button');
await locator.click();
```

Learn more in the [documentation](./api/class-locator).

#### 🧩 Experimental [**React**](./selectors#react-selectors) and [**Vue**](./selectors#vue-selectors) selector engines

React and Vue selectors allow selecting elements by its component name and/or property values. The syntax is very similar to [attribute selectors](https://developer.mozilla.org/en-US/docs/Web/CSS/Attribute_selectors) and supports all attribute selector operators.

```js
await page.click('_react=SubmitButton[enabled=true]');
await page.click('_vue=submit-button[enabled=true]');
```

Learn more in the [react selectors documentation](./selectors#react-selectors) and the [vue selectors documentation](./selectors#vue-selectors).

#### ✨ New [**`nth`**](./selectors#n-th-element-selector) and [**`visible`**](./selectors#selecting-visible-elements) selector engines
- [`nth`](./selectors#n-th-element-selector) selector engine is equivalent to the `:nth-match` pseudo class, but could be combined with other selector engines.
- [`visible`](./selectors#selecting-visible-elements) selector engine is equivalent to the `:visible` pseudo class, but could be combined with other selector engines.

```js
// select the first button among all buttons
await button.click('button >> nth=0');
// or if you are using locators, you can use first(), nth() and last()
await page.locator('button').first().click();

// click a visible button
await button.click('button >> visible=true');
```

### 🎭 Playwright Test

#### ✅ Web-First Assertions

`expect` now supports lots of new web-first assertions.

Consider the following example:

```js
await expect(page.locator('.status')).toHaveText('Submitted');
```

Playwright Test will be re-testing the node with the selector `.status` until fetched Node has the `"Submitted"` text. It will be re-fetching the node and checking it over and over, until the condition is met or until the timeout is reached. You can either pass this timeout or configure it once via the [`testProject.expect`](./api/class-testproject/#test-project-expect) value in test config.

By default, the timeout for assertions is not set, so it'll wait forever, until the whole test times out.

List of all new assertions:
- [`expect(locator).toBeChecked()`](./test-assertions#expectlocatortobechecked)
- [`expect(locator).toBeDisabled()`](./test-assertions#expectlocatortobedisabled)
- [`expect(locator).toBeEditable()`](./test-assertions#expectlocatortobeeditable)
- [`expect(locator).toBeEmpty()`](./test-assertions#expectlocatortobeempty)
- [`expect(locator).toBeEnabled()`](./test-assertions#expectlocatortobeenabled)
- [`expect(locator).toBeFocused()`](./test-assertions#expectlocatortobefocused)
- [`expect(locator).toBeHidden()`](./test-assertions#expectlocatortobehidden)
- [`expect(locator).toBeVisible()`](./test-assertions#expectlocatortobevisible)
- [`expect(locator).toContainText(text, options?)`](./test-assertions#expectlocatortocontaintexttext-options)
- [`expect(locator).toHaveAttribute(name, value)`](./test-assertions#expectlocatortohaveattributename-value)
- [`expect(locator).toHaveClass(expected)`](./test-assertions#expectlocatortohaveclassexpected)
- [`expect(locator).toHaveCount(count)`](./test-assertions#expectlocatortohavecountcount)
- [`expect(locator).toHaveCSS(name, value)`](./test-assertions#expectlocatortohavecssname-value)
- [`expect(locator).toHaveId(id)`](./test-assertions#expectlocatortohaveidid)
- [`expect(locator).toHaveJSProperty(name, value)`](./test-assertions#expectlocatortohavejspropertyname-value)
- [`expect(locator).toHaveText(expected, options)`](./test-assertions#expectlocatortohavetextexpected-options)
- [`expect(page).toHaveTitle(title)`](./test-assertions#expectpagetohavetitletitle)
- [`expect(page).toHaveURL(url)`](./test-assertions#expectpagetohaveurlurl)
- [`expect(locator).toHaveValue(value)`](./test-assertions#expectlocatortohavevaluevalue)

#### ⛓ Serial mode with [`describe.serial`](./api/class-test#test-describe-serial)

Declares a group of tests that should always be run serially. If one of the tests fails, all subsequent tests are skipped. All tests in a group are retried together.

Learn more in the [documentation](./api/class-test#test-describe-serial).

#### 🐾 Steps API with [`test.step`](./api/class-test#test-step)

Split long tests into multiple steps using `test.step()` API:

Step information is exposed in reporters API.

#### 🌎 Launch web server before running tests

To launch a server during the tests, use the [`webServer`](./test-advanced/#launching-a-development-web-server-during-the-tests) option in the configuration file. The server will wait for a given port to be available before running the tests, and the port will be passed over to Playwright as a [`baseURL`](./api/class-fixtures#fixtures-base-url) when creating a context.

Learn more in the [documentation](./test-advanced#launching-a-development-web-server-during-the-tests).

### Browser Versions
- Chromium 94.0.4595.0
- Mozilla Firefox 91.0
- WebKit 15.0

## Version 1.13

#### Playwright Test
- **⚡️ Introducing [Reporter API](https://github.com/microsoft/playwright/blob/master/types/testReporter.d.ts)** which is already used to create an [Allure Playwright reporter](https://github.com/allure-framework/allure-js/pull/297).
- **⛺️ New [`baseURL` fixture](./test-configuration#basic-options)** to support relative paths in tests.

#### Playwright
- **🖖 Programmatic drag-and-drop support** via the [page.dragAndDrop(source, target[, options])](./api/class-page.mdx#page-drag-and-drop) API.
- **🔎 Enhanced HAR** with body sizes for requests and responses. Use via `recordHar` option in [browser.newContext([options])](./api/class-browser.mdx#browser-new-context).

#### Tools
- Playwright Trace Viewer now shows parameters, returned values and `console.log()` calls.
- Playwright Inspector can generate Playwright Test tests.

#### New and Overhauled Guides
- [Intro](./intro.mdx)
- [Authentication](./auth.mdx)
- [Chome Extensions](./chrome-extensions.mdx)
- [Playwright Test Annotations](./test-annotations.mdx)
- [Playwright Test Configuration](./test-configuration.mdx)
- [Playwright Test Fixtures](./test-fixtures.mdx)

#### Browser Versions
- Chromium 93.0.4576.0
- Mozilla Firefox 90.0
- WebKit 14.2

#### New Playwright APIs
- new `baseURL` option in [browser.newContext([options])](./api/class-browser.mdx#browser-new-context) and [browser.newPage([options])](./api/class-browser.mdx#browser-new-page)
- [response.securityDetails()](./api/class-response.mdx#response-security-details) and [response.serverAddr()](./api/class-response.mdx#response-server-addr)
- [page.dragAndDrop(source, target[, options])](./api/class-page.mdx#page-drag-and-drop) and [frame.dragAndDrop(source, target[, options])](./api/class-frame.mdx#frame-drag-and-drop)
- [download.cancel()](./api/class-download.mdx#download-cancel)
- [page.inputValue(selector[, options])](./api/class-page.mdx#page-input-value), [frame.inputValue(selector[, options])](./api/class-frame.mdx#frame-input-value) and [elementHandle.inputValue([options])](./api/class-elementhandle.mdx#element-handle-input-value)
- new `force` option in [page.fill(selector, value[, options])](./api/class-page.mdx#page-fill), [frame.fill(selector, value[, options])](./api/class-frame.mdx#frame-fill), and [elementHandle.fill(value[, options])](./api/class-elementhandle.mdx#element-handle-fill)
- new `force` option in [page.selectOption(selector, values[, options])](./api/class-page.mdx#page-select-option), [frame.selectOption(selector, values[, options])](./api/class-frame.mdx#frame-select-option), and [elementHandle.selectOption(values[, options])](./api/class-elementhandle.mdx#element-handle-select-option)

## Version 1.12

#### ⚡️ Introducing Playwright Test

[Playwright Test](./intro.mdx) is a **new test runner** built from scratch by Playwright team specifically to accommodate end-to-end testing needs:
- Run tests across all browsers.
- Execute tests in parallel.
- Enjoy context isolation and sensible defaults out of the box.
- Capture videos, screenshots and other artifacts on failure.
- Integrate your POMs as extensible fixtures.

Installation:

```bash
npm i -D @playwright/test
```

Simple test `tests/foo.spec.ts`:

Running:

```bash
npx playwright test
```

👉  Read more in [Playwright Test documentation](./intro.mdx).

#### 🧟‍♂️ Introducing Playwright Trace Viewer

[Playwright Trace Viewer](./trace-viewer.mdx) is a new GUI tool that helps exploring recorded Playwright traces after the script ran. Playwright traces let you examine:
- page DOM before and after each Playwright action
- page rendering before and after each Playwright action
- browser network during script execution

Traces are recorded using the new [browserContext.tracing](./api/class-browsercontext.mdx#browser-context-tracing) API:

Traces are examined later with the Playwright CLI:

That will open the following GUI:

![image](https://user-images.githubusercontent.com/746130/121109654-d66c4480-c7c0-11eb-8d4d-eb70d2b03811.png)

👉 Read more in [trace viewer documentation](./trace-viewer.mdx).

#### Browser Versions
- Chromium 93.0.4530.0
- Mozilla Firefox 89.0
- WebKit 14.2

This version of Playwright was also tested against the following stable channels:
- Google Chrome 91
- Microsoft Edge 91

#### New APIs
- `reducedMotion` option in [page.emulateMedia([options])](./api/class-page.mdx#page-emulate-media), [browserType.launchPersistentContext(userDataDir[, options])](./api/class-browsertype.mdx#browser-type-launch-persistent-context), [browser.newContext([options])](./api/class-browser.mdx#browser-new-context) and [browser.newPage([options])](./api/class-browser.mdx#browser-new-page)
- [browserContext.on('request')](./api/class-browsercontext.mdx#browser-context-event-request)
- [browserContext.on('requestfailed')](./api/class-browsercontext.mdx#browser-context-event-request-failed)
- [browserContext.on('requestfinished')](./api/class-browsercontext.mdx#browser-context-event-request-finished)
- [browserContext.on('response')](./api/class-browsercontext.mdx#browser-context-event-response)
- `tracesDir` option in [browserType.launch([options])](./api/class-browsertype.mdx#browser-type-launch) and [browserType.launchPersistentContext(userDataDir[, options])](./api/class-browsertype.mdx#browser-type-launch-persistent-context)
- new [browserContext.tracing](./api/class-browsercontext.mdx#browser-context-tracing) API namespace
- new [download.page()](./api/class-download.mdx#download-page) method

## Version 1.11

🎥  New video: [Playwright: A New Test Automation Framework for the Modern Web](https://youtu.be/_Jla6DyuEu4) ([slides](https://docs.google.com/presentation/d/1xFhZIJrdHkVe2CuMKOrni92HoG2SWslo0DhJJQMR1DI/edit?usp=sharing))
- We talked about Playwright
- Showed engineering work behind the scenes
- Did live demos with new features ✨
- **Special thanks** to [applitools](http://applitools.com/) for hosting the event and inviting us!

#### Browser Versions
- Chromium 92.0.4498.0
- Mozilla Firefox 89.0b6
- WebKit 14.2

#### New APIs
- support for **async predicates** across the API in methods such as [page.waitForRequest(urlOrPredicate[, options])](./api/class-page.mdx#page-wait-for-request) and others
- new **emulation devices**: Galaxy S8, Galaxy S9+, Galaxy Tab S4, Pixel 3, Pixel 4
- new methods:
  * [page.waitForURL(url[, options])](./api/class-page.mdx#page-wait-for-url) to await navigations to URL
  * [video.delete()](./api/class-video.mdx#video-delete) and [video.saveAs(path)](./api/class-video.mdx#video-save-as) to manage screen recording
- new options:
  * `screen` option in the [browser.newContext([options])](./api/class-browser.mdx#browser-new-context) method to emulate `window.screen` dimensions
  * `position` option in [page.check(selector[, options])](./api/class-page.mdx#page-check) and [page.uncheck(selector[, options])](./api/class-page.mdx#page-uncheck) methods
  * `trial` option to dry-run actions in [page.check(selector[, options])](./api/class-page.mdx#page-check), [page.uncheck(selector[, options])](./api/class-page.mdx#page-uncheck), [page.click(selector[, options])](./api/class-page.mdx#page-click), [page.dblclick(selector[, options])](./api/class-page.mdx#page-dblclick), [page.hover(selector[, options])](./api/class-page.mdx#page-hover) and [page.tap(selector[, options])](./api/class-page.mdx#page-tap)

## Version 1.10
- [Playwright for Java v1.10](https://github.com/microsoft/playwright-java) is **now stable**!
- Run Playwright against **Google Chrome** and **Microsoft Edge** stable channels with the [new channels API](./browsers).
- Chromium screenshots are **fast** on Mac & Windows.

#### Bundled Browser Versions
- Chromium 90.0.4430.0
- Mozilla Firefox 87.0b10
- WebKit 14.2

This version of Playwright was also tested against the following stable channels:
- Google Chrome 89
- Microsoft Edge 89

#### New APIs
- [`browserType.launch()`](./api/class-browsertype#browsertypelaunchoptions) now accepts the new `'channel'` option. Read more in [our documentation](./browsers).

## Version 1.9
- [Playwright Inspector](./inspector.mdx) is a **new GUI tool** to author and debug your tests.
  - **Line-by-line debugging** of your Playwright scripts, with play, pause and step-through.
  - Author new scripts by **recording user actions**.
  - **Generate element selectors** for your script by hovering over elements.
  - Set the `PWDEBUG=1` environment variable to launch the Inspector
- **Pause script execution** with [page.pause()](./api/class-page.mdx#page-pause) in headed mode. Pausing the page launches [Playwright Inspector](./inspector.mdx) for debugging.
- **New has-text pseudo-class** for CSS selectors. `:has-text("example")` matches any element containing `"example"` somewhere inside, possibly in a child or a descendant element. See [more examples](./selectors.mdx#text-selector).
- **Page dialogs are now auto-dismissed** during execution, unless a listener for `dialog` event is configured. [Learn more](./dialogs.mdx) about this.
- [Playwright for Python](https://github.com/microsoft/playwright-python) is **now stable** with an idiomatic snake case API and pre-built [Docker image](./docker.mdx) to run tests in CI/CD.

#### Browser Versions
- Chromium 90.0.4421.0
- Mozilla Firefox 86.0b10
- WebKit 14.1

#### New APIs
- [page.pause()](./api/class-page.mdx#page-pause).

## Version 1.8
- [Selecting elements based on layout](./selectors.mdx#selecting-elements-based-on-layout) with `:left-of()`, `:right-of()`, `:above()` and `:below()`.
- Playwright now includes [command line interface](./cli.mdx), former playwright-cli.

  ```bash
  npx playwright --help
  ```

- [page.selectOption(selector, values[, options])](./api/class-page.mdx#page-select-option) now waits for the options to be present.
- New methods to [assert element state](./actionability#assertions) like [page.isEditable(selector[, options])](./api/class-page.mdx#page-is-editable).

#### New APIs
- [elementHandle.isChecked()](./api/class-elementhandle.mdx#element-handle-is-checked).
- [elementHandle.isDisabled()](./api/class-elementhandle.mdx#element-handle-is-disabled).
- [elementHandle.isEditable()](./api/class-elementhandle.mdx#element-handle-is-editable).
- [elementHandle.isEnabled()](./api/class-elementhandle.mdx#element-handle-is-enabled).
- [elementHandle.isHidden()](./api/class-elementhandle.mdx#element-handle-is-hidden).
- [elementHandle.isVisible()](./api/class-elementhandle.mdx#element-handle-is-visible).
- [page.isChecked(selector[, options])](./api/class-page.mdx#page-is-checked).
- [page.isDisabled(selector[, options])](./api/class-page.mdx#page-is-disabled).
- [page.isEditable(selector[, options])](./api/class-page.mdx#page-is-editable).
- [page.isEnabled(selector[, options])](./api/class-page.mdx#page-is-enabled).
- [page.isHidden(selector[, options])](./api/class-page.mdx#page-is-hidden).
- [page.isVisible(selector[, options])](./api/class-page.mdx#page-is-visible).
- New option `'editable'` in [elementHandle.waitForElementState(state[, options])](./api/class-elementhandle.mdx#element-handle-wait-for-element-state).

#### Browser Versions
- Chromium 90.0.4392.0
- Mozilla Firefox 85.0b5
- WebKit 14.1

## Version 1.7
- **New Java SDK**: [Playwright for Java](https://github.com/microsoft/playwright-java) is now on par with [JavaScript](https://github.com/microsoft/playwright), [Python](https://github.com/microsoft/playwright-python) and [.NET bindings](https://github.com/microsoft/playwright-dotnet).
- **Browser storage API**: New convenience APIs to save and load browser storage state (cookies, local storage) to simplify automation scenarios with authentication.
- **New CSS selectors**: We heard your feedback for more flexible selectors and have revamped the selectors implementation. Playwright 1.7 introduces [new CSS extensions](./selectors.mdx) and there's more coming soon.
- **New website**: The docs website at [playwright.dev](https://playwright.dev/) has been updated and is now built with [Docusaurus](https://v2.docusaurus.io/).
- **Support for Apple Silicon**: Playwright browser binaries for WebKit and Chromium are now built for Apple Silicon.

#### New APIs
- [browserContext.storageState([options])](./api/class-browsercontext.mdx#browser-context-storage-state) to get current state for later reuse.
- `storageState` option in [browser.newContext([options])](./api/class-browser.mdx#browser-new-context) and [browser.newPage([options])](./api/class-browser.mdx#browser-new-page) to setup browser context state.

#### Browser Versions
- Chromium 89.0.4344.0
- Mozilla Firefox 84.0b9
- WebKit 14.1

[Accessibility]: ./api/class-accessibility.mdx "Accessibility"
[Android]: ./api/class-android.mdx "Android"
[AndroidDevice]: ./api/class-androiddevice.mdx "AndroidDevice"
[AndroidInput]: ./api/class-androidinput.mdx "AndroidInput"
[AndroidSocket]: ./api/class-androidsocket.mdx "AndroidSocket"
[AndroidWebView]: ./api/class-androidwebview.mdx "AndroidWebView"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserServer]: ./api/class-browserserver.mdx "BrowserServer"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[CDPSession]: ./api/class-cdpsession.mdx "CDPSession"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Coverage]: ./api/class-coverage.mdx "Coverage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[Electron]: ./api/class-electron.mdx "Electron"
[ElectronApplication]: ./api/class-electronapplication.mdx "ElectronApplication"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[FetchRequest]: ./api/class-fetchrequest.mdx "FetchRequest"
[FetchResponse]: ./api/class-fetchresponse.mdx "FetchResponse"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Locator]: ./api/class-locator.mdx "Locator"
[Logger]: ./api/class-logger.mdx "Logger"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[Worker]: ./api/class-worker.mdx "Worker"
[Fixtures]: ./api/class-fixtures.mdx "Fixtures"
[Test]: ./api/class-test.mdx "Test"
[TestConfig]: ./api/class-testconfig.mdx "TestConfig"
[TestError]: ./api/class-testerror.mdx "TestError"
[TestInfo]: ./api/class-testinfo.mdx "TestInfo"
[TestOptions]: ./api/class-testoptions.mdx "TestOptions"
[TestProject]: ./api/class-testproject.mdx "TestProject"
[WorkerInfo]: ./api/class-workerinfo.mdx "WorkerInfo"
[Location]: ./api/class-location.mdx "Location"
[Reporter]: ./api/class-reporter.mdx "Reporter"
[Suite]: ./api/class-suite.mdx "Suite"
[TestCase]: ./api/class-testcase.mdx "TestCase"
[TestResult]: ./api/class-testresult.mdx "TestResult"
[TestStep]: ./api/class-teststep.mdx "TestStep"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./core-concepts.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[Array]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array "Array"
[boolean]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Boolean_type "Boolean"
[Buffer]: https://nodejs.org/api/buffer.html#buffer_class_buffer "Buffer"
[ChildProcess]: https://nodejs.org/api/child_process.html "ChildProcess"
[Error]: https://nodejs.org/api/errors.html#errors_class_error "Error"
[EventEmitter]: https://nodejs.org/api/events.html#events_class_eventemitter "EventEmitter"
[function]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Function "Function"
[Map]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Map "Map"
[null]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/null "null"
[number]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Number_type "Number"
[Object]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object "Object"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[Readable]: https://nodejs.org/api/stream.html#stream_class_stream_readable "Readable"
[RegExp]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/RegExp "RegExp"
[string]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#String_type "string"
[void]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/undefined "void"
[URL]: https://nodejs.org/api/url.html "URL"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright/blob/master/utils/docker/Dockerfile.focal "Dockerfile.focal"
